Fix dark mode link color

--- a/src/assets/scss/_theme-variables.scss
+++ b/src/assets/scss/_theme-variables.scss
@@ -12,7 +12,7 @@ $breakpoint-xl: 1200px;
         monospace;
     --font-size-small: 12px;
 
-    --home-link-color: #5c2941;
+    --home-link-color: var(--theme-ui-colors-link);
     --home-link-hover-color: var(--primary-color);
 
     --button-color: #e5c3d3;
